fix: inconsistent height on mobile

--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ body {
 #overlay-dark {
   position: absolute;
   width: 100vw;
-  height: 100vh;
+  height: 100%;
   background: #202020;
   z-index: 2;
 }
